--- a/config.json
+++ b/config.json
@@ -14,6 +14,6 @@
     "blog_remote_url": "https://github.com/CrackTC/nolib.git",
     "blog_fetch_interval": "1h",
     "blogs_per_page": 10,
-    "redis_url": "redis://localhost:6379",
+    "redis_url": "redis://redis:6379",
     "redis_expiration": "240h"
 }
