--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - '8880:8880'
     volumes:
       - ./blog:/web/blog
+      - ./config.json:/config.json
   redis:
     image: redis:alpine
     restart: always
