--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,15 +9,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 'stable'
-      - run: make build
-      - run: mkdir -p docker/build
-      - run: cp bin/blog docker/build
-      - run: cp sharpdown docker/build
-      - run: cp -r web docker/build
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
@@ -28,6 +19,6 @@ jobs:
       - name: Docker Build & Push
         uses: docker/build-push-action@v4
         with:
-          context: docker
+          context: .
           push: true
           tags: cracktc/blog:latest
